slowly remove echo, write own http handler
