# web/public/swagger.json
@@ -1,24 +1,8 @@
-// GENERATED BY THE COMMAND ABOVE; DO NOT EDIT
-// This file was generated by swaggo/swag at
-// 2020-02-11 18:50:01.55539 +0100 CET m=+0.121127201
-
-package docs
-
-import (
-	"bytes"
-	"encoding/json"
-	"strings"
-
-	"github.com/alecthomas/template"
-	"github.com/swaggo/swag"
-)
-
-var doc = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{.Description}}",
-        "title": "{{.Title}}",
+        "description": "API for twitch logs",
+        "title": "justlog API",
         "contact": {
             "name": "gempir",
             "url": "https://gempir.com",
@@ -28,10 +12,10 @@ var doc = `{
             "name": "MIT",
             "url": "https://github.com/gempir/justlog/blob/master/LICENSE"
         },
-        "version": "{{.Version}}"
+        "version": "1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
+    "host": "logs.ivr.fi",
+    "basePath": "/",
     "paths": {
         "/channel/{channel}/user/{username}": {
             "get": {
@@ -139,7 +123,7 @@ var doc = `{
                 }
             }
         },
-        "/channel/{channel}/user/{username}/{year}/{month}": {
+        "/channel/{channel}/user/{username}/{time}": {
             "get": {
                 "produces": [
                     "application/json",
@@ -409,7 +393,7 @@ var doc = `{
                 }
             }
         },
-        "/v2/{channelType}/{channel}/{userType}/{user}/{year}/{month}": {
+        "/{channelType}/{channel}/{userType}/{user}/{year}/{month}": {
             "get": {
                 "produces": [
                     "application/json",
@@ -529,51 +513,4 @@ var doc = `{
             "type": "object"
         }
     }
-}`
-
-type swaggerInfo struct {
-	Version     string
-	Host        string
-	BasePath    string
-	Schemes     []string
-	Title       string
-	Description string
-}
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = swaggerInfo{
-	Version:     "1.0",
-	Host:        "logs.ivr.fi",
-	BasePath:    "/",
-	Schemes:     []string{},
-	Title:       "justlog API",
-	Description: "API for twitch logs",
-}
-
-type s struct{}
-
-func (s *s) ReadDoc() string {
-	sInfo := SwaggerInfo
-	sInfo.Description = strings.Replace(sInfo.Description, "\n", "\\n", -1)
-
-	t, err := template.New("swagger_info").Funcs(template.FuncMap{
-		"marshal": func(v interface{}) string {
-			a, _ := json.Marshal(v)
-			return string(a)
-		},
-	}).Parse(doc)
-	if err != nil {
-		return doc
-	}
-
-	var tpl bytes.Buffer
-	if err := t.Execute(&tpl, sInfo); err != nil {
-		return doc
-	}
-
-	return tpl.String()
-}
-
-func init() {
-	swag.Register(swag.Name, &s{})
 }
